<resources>
    <string name="app_name">Trackin</string>
    <string name="cancel_session">Cancel Session</string>
    <string name="do_you_want_to_cancel_this_session_the_data_of_this_session_will_be_lost_forever">Do you want to cancel this session, the data of this session will be lost forever?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_sessions">Your Sessions</string>
    <string name="all_sessions">All Sessions</string>
    <string name="no_sessions_present">No Sessions Present</string>
    <string name="enter_details">Enter Details</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance</string>
    <string name="km">km</string>
    <string name="kcal">kcal</string>
    <string name="calories">Calories</string>
    <string name="time">Time</string>
    <string name="average_speed">Average Speed</string>
    <string name="km_h">km/h</string>
    <string name="recent_sessions">Recent Sessions</string>
    <string name="overall_stats">Overall Stats</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_weight">Enter weight</string>
    <string name="date">Date</string>
    <string name="speed">Speed</string>
    <string name="more_stats">More Stats</string>
    <string name="kg">kg</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="add_the_distance_goal_you_want_to_complete_daily">Add the distance goal you want to complete daily</string>
    <string name="add_the_calories_goal_you_want_to_burn_daily">Add the calories goal you want to burn daily</string>
    <string name="update_details">Update Details</string>
    <string name="change_daily_goal_for_distance">Change daily goal for distance</string>
    <string name="change_daily_goal_for_calories_to_burn">Change daily goal for calories to burn</string>
    <string name="change_application_theme">Change application theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>