<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_light"
    android:padding="16dp">
    
    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_session"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/avenir_semibold"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tvDialogBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_cancel_this_session_the_data_of_this_session_will_be_lost_forever"
        android:textSize="14sp"
        android:textColor="@color/white_alpha_85"
        android:fontFamily="@font/avenir_medium"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvNoCancelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="@color/white_alpha_60"
        android:fontFamily="@font/avenir_semibold"
        app:layout_constraintTop_toBottomOf="@id/tvDialogBody"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvYesCancelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/blue_500"
        android:fontFamily="@font/avenir_semibold"
        app:layout_constraintTop_toBottomOf="@id/tvDialogBody"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>