<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.UpdateDetailsFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="?attr/bg_color_light"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/blue_200"
        android:elevation="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_details"
        android:textColor="?attr/text_color"
        android:textSize="16sp"
        android:fontFamily="@font/avenir_semibold"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEnterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/enter_name"
        android:textColor="?attr/text_color_70"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawableTint="@color/blue_200"
        android:fontFamily="@font/avenir_medium"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:padding="8dp"
        android:textColor="?attr/text_color"
        android:textCursorDrawable="@null"
        android:textSize="15sp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnterNameText"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvEnterWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/enter_weight"
        android:textColor="?attr/text_color_70"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etUserWeight"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/avenir_medium"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:padding="5dp"
        android:textColor="?attr/text_color"
        android:textCursorDrawable="@null"
        android:textSize="15sp"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnterWeightText"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:textSize="14sp"
        android:elevation="10dp"
        android:textColor="@color/blue_200"
        android:fontFamily="@font/avenir_bold"
        app:layout_constraintTop_toTopOf="@id/etUserWeight"
        app:layout_constraintBottom_toBottomOf="@id/etUserWeight"
        app:layout_constraintEnd_toEndOf="@id/etUserWeight"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tvDailyGoalDistanceChangeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/change_daily_goal_for_distance"
        android:textColor="?attr/text_color_70"
        app:layout_constraintTop_toBottomOf="@id/etUserWeight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp" />

    <Spinner
        android:id="@+id/spinnerDistance"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/spinner_shape"
        app:layout_constraintTop_toBottomOf="@id/tvDailyGoalDistanceChangeInfo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/km"
        android:textColor="@color/blue_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/spinnerDistance"
        app:layout_constraintStart_toEndOf="@id/spinnerDistance"
        app:layout_constraintTop_toTopOf="@id/spinnerDistance" />

    <TextView
        android:id="@+id/tvDailyGoalCaloriesChangeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/change_daily_goal_for_calories_to_burn"
        android:textColor="?attr/text_color_70"
        app:layout_constraintTop_toBottomOf="@id/spinnerDistance"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>

    <Spinner
        android:id="@+id/spinnerCalories"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_shape"
        app:layout_constraintTop_toBottomOf="@id/tvDailyGoalCaloriesChangeInfo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/kcal"
        android:textColor="@color/blue_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/spinnerCalories"
        app:layout_constraintStart_toEndOf="@id/spinnerCalories"
        app:layout_constraintTop_toTopOf="@id/spinnerCalories" />

    <ImageView
        android:id="@+id/ivUpdate"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/bg_color_light"
        android:elevation="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blue_200" />

</androidx.constraintlayout.widget.ConstraintLayout>