<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboard.DailyGoalFragment"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvDailyGoalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/daily_goal"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tvDailyGoalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_the_distance_goal_you_want_to_complete_daily"
        android:textColor="@color/white_alpha_80"
        android:fontFamily="@font/avenir_medium"
        app:layout_constraintBottom_toTopOf="@id/spinnerDistance"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"/>
    
    <Spinner
        android:id="@+id/spinnerDistance"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:textSize="14sp"
        android:elevation="10dp"
        android:textColor="@color/blue_200"
        android:fontFamily="@font/avenir_bold"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/spinnerDistance"
        app:layout_constraintBottom_toBottomOf="@id/spinnerDistance"
        app:layout_constraintStart_toEndOf="@id/spinnerDistance"
        android:layout_marginStart="16dp"/>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black_light"
        android:elevation="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:src="@drawable/ic_back_arrow_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/blue_200" />

    <ImageView
        android:id="@+id/ivSubmit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black_light"
        android:elevation="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blue_200" />
        
</androidx.constraintlayout.widget.ConstraintLayout>