<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnboardActivity"
    android:background="@color/black_bg">

    <TextView
        android:id="@+id/tvEnterDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:fontFamily="@font/avenir_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>

    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            style="@style/InputStyle"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/blue_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/avenir_medium"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            style="@style/InputStyle"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/blue_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/avenir_medium"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSubmit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/button_dark_bg"
        android:src="@drawable/ic_check"
        app:tint="@color/blue_200"
        android:elevation="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>