<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSessionRoot"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/ivSessionImage"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llSessionInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/ivSessionImage"
        app:layout_constraintBottom_toBottomOf="@id/ivSessionImage"
        app:layout_constraintStart_toEndOf="@id/ivSessionImage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvSessionDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Jun 01,2022"
                android:textColor="?attr/text_color"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="?attr/text_color_50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvSessionDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2.0 km"
                android:textColor="?attr/text_color"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="12sp"
                android:textColor="?attr/text_color_50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvSessionAverageSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="24.6 km/h"
                android:textColor="?attr/text_color"
                android:textSize="13sp"
                android:fontFamily="@font/avenir_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="12sp"
                android:textColor="?attr/text_color_50"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:textColor="?attr/text_color_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSessionImage"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>