<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SessionDetailsFragment"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_light"
        android:elevation="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/blue_200" />

    <ImageView
        android:id="@+id/ivSessionImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/llSessionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ivSessionImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_timer"
            app:tint="@color/green"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvTotalSessionTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_semibold"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="01h 40m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/time"
                android:textColor="@color/white_alpha_50" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSessionDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ivSessionImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_runner"
            app:tint="@color/red"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvTotalSessionDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_semibold"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="2 km" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/distance"
                android:textColor="@color/white_alpha_50" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSessionCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llSessionTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_fire_outline"
            app:tint="@color/orange"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvTotalSessionCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_semibold"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="01h 40m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/calories"
                android:textColor="@color/white_alpha_50" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSessionAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llSessionDistance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_flash"
            app:tint="@color/blue"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvTotalSessionAverageSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_semibold"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="20 km/h" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/average_speed"
                android:textColor="@color/white_alpha_50" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>